k8s/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-web-app
  labels:
    app: flask-web-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-web-app
  template:
    metadata:
      labels:
        app: flask-web-app
    spec:
      containers:
      - name: flask-web-app
        image: naveen192/flask-web-app:latest
        ports:
        - containerPort: 5000
